@@ -5,7 +5,7 @@
 * Adding AVIF support using libsvtav1
 * Adding #352 default output directory to settings panel (thanks to Maddie Davis)
 * Adding #306 support for audio profiles with pattern matching for rigaya's hardware encoders
-* Adding Select All feature for subtitles (thanks to ProFire)
+* Adding #301 Select All feature for subtitles (thanks to ProFire and Genine-Collin)
 * Adding #325 build for Ubuntu 22.04 (thanks to mrjayviper)
 * Adding build for MacOS 12
 * Adding #322 warning if profile audio match doesn't match anything (thanks to wynterca)
@@ -13,6 +13,7 @@
 * Fixing #218 and #308 subtitle scaling with rigaya's hardware encoders needs to be scaled for 4K content (thanks to wynterca)
 * Fixing #350 subtitle burn in quoting (thanks to Maddie Davis)
 * Fixing #346 preserve the order of audio tracks when editing a queued job (thanks to Patrick Bassner)
+* Fixing #187 closing the main app while a progress bar is active will now stop that task (thanks to Todd Wilkinson)
 * Fixing Chinese translations (thanks to leonardyan)
 
 ## Version 4.9.4
